Fixed modal spacing

--- a/src/riac/riac.css
+++ b/src/riac/riac.css
@@ -163,7 +163,6 @@
 .riac-modal-current {
   grid-row: 2/3;
   grid-column: 1/3;
-  padding-top: 10%;
   padding-left: 10%;
   font-weight: bold;
 }
@@ -171,7 +170,6 @@
 .riac-modal-compared {
   grid-row: 2/3;
   grid-column: 4/6;
-  padding-top: 10%;
   padding-left: 10%;
   font-weight: bold;
 }
@@ -188,12 +186,14 @@
 
 .riac-modal-feature-current {
   grid-column: 1/2;
-  padding-left: 25%
+  padding-left: 15px;
+  text-align: left;
 }
 
 .riac-modal-feature-compared {
   grid-column: 5/6;
-  padding-right: 25%
+  padding-right: 15px;
+  text-align: right;
 }
 
 
